@@ -45,8 +45,9 @@ define("RRDTOOL_OUTPUT_GRAPH_DATA", 3);
 
 define("DATA_QUERY_AUTOINDEX_NONE", 0);
 define("DATA_QUERY_AUTOINDEX_BACKWARDS_UPTIME", 1);
-define("DATA_QUERY_AUTOINDEX_INDEX_NUM_CHANGE", 2);
+define("DATA_QUERY_AUTOINDEX_INDEX_COUNT_CHANGE", 2);
 define("DATA_QUERY_AUTOINDEX_FIELD_VERIFICATION", 3);
+define("DATA_QUERY_AUTOINDEX_VALUE_CHANGE", 4);
 
 define("DATA_INPUT_TYPE_SCRIPT", 1);
 define("DATA_INPUT_TYPE_SNMP", 2);
